# mylog

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  auto.sh  tmp.hpp
cmake/: merge_archives.cmake
include/compress/: compress.hpp  zlib_compress.hpp  zstd_compress.hpp
include/context/: context.hpp  entry.hpp  excutor.hpp  excutor_context.hpp  excutor_timer.hpp  executor.hpp  executor_context.hpp  executor_manager.hpp  executor_timer.hpp  threadpool.hpp  using.hpp
include/crypt/: aes_crypt.hpp  crypt.hpp
include/logger/: effective_sink.hpp  formatter.hpp  internal_log.hpp  logger_config.hpp  logger_handle.hpp  sink.hpp  using.hpp
include/logger/compress/: compress.hpp  zlib_compress.hpp  zstd_compress.hpp
include/logger/context/: context.hpp  entry.hpp  executor.hpp  executor_context.hpp  executor_manager.hpp  executor_timer.hpp  threadpool.hpp  using.hpp
include/logger/crypt/: aes_crypt.hpp  crypt.hpp
include/logger/mmap/: mmap.hpp
include/logger/proto/: effective_formatter.hpp
include/logger/utils/: filestream_linux.hpp  linux_ids.hpp  space.hpp
include/logging/: effective_sink.hpp  formatter.hpp  internal_log.hpp  logger_config.hpp  logger_handle.hpp  sink.hpp
include/mmap/: mmap.hpp
include/protoubuf/: effective_formatter.hpp
include/threadpool/: threadpool.hpp
include/utils/: filestream_linux.hpp  linux_ids.hpp  space.hpp
mmap/: mmap.cpp  mmap.hpp
mmap/test/: main.cpp
src/compress/: zlib_compress.cpp  zstd_compress.cpp
src/contex/: excutor.cpp  excutor_context.cpp  excutor_timer.cpp  threadpool.cpp
src/context/: context.cpp  executor.cpp  executor_context.cpp  executor_manager.cpp  executor_timer.cpp  formatter.cpp  threadpool.cpp
src/crypt/: aes_crypt.cpp  crypt.cpp
src/logger/: effective_sink.cpp  formatter.cpp  logger_handle.cpp  sink.cpp
src/logger/compress/: zlib_compress.cpp  zstd_compress.cpp
src/logger/context/: context.cpp  executor.cpp  executor_context.cpp  executor_manager.cpp  executor_timer.cpp  threadpool.cpp
src/logger/crypt/: aes_crypt.cpp  crypt.cpp
src/logger/mmap/: mmap.cpp
src/logger/proto/: effective_formatter.cpp  effective_msg.pb.cc  effective_msg.pb.h  effective_msg.proto
src/logger/utils/: filestream_linux.cc  linux_ids.cc
src/logging/: effective_sink.cpp  formatter.cpp  logger_handle.cpp  sink.cpp
src/mmap/: mmap.cpp
src/protobuf/: effective_formatter.cpp
src/threadpool/: threadpool.cpp
src/utils/: filestream_linux.cc  linux_ids.cc
test/: CMakeLists.txt  build_and_run.sh  build_test_main  main.cpp  mmap_test.txt  test_mmap.cpp  test_space.cpp
test/manual/: main.cpp  perf_effective_sink.cpp  perf_report.md
test/unit/: test_compress.cpp  test_context.cpp  test_crypt.cpp  test_effective_sink.cpp  test_mmap.cpp
tools/: CMakeLists.txt  log_parser.cpp  test_roundtrip.cpp
utils/: filestream_linux.cc  filestream_linux.hpp  space.hpp
